dark mode fix on read

--- a/src/app.css
+++ b/src/app.css
@@ -14,6 +14,7 @@
     --footer-bg: #4A7193;
 
     --accent: #EFD092;
+    --button-text: #21375E;
 
   /* Text color for header/nav/footer */
     --section-text: #21375E;
